[metadata]
name = relion-helper
description = Utilities for Relion Cryo-EM data processing on clusters.
long_description = file: README.md
long_description_content_type = text/md; charset=UTF-8
url = https://github.com/ucdavis/relion-helper
version = 0.1
author = Camille Scott
author_email = cswel@ucdavis.edu
license = modified BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
zip_safe = False
platforms = any
python_requires = >=3.8
install_requires = 
    rich

[options.packages.find]
exlude =
    tests
    docs

[options.entry_points]
console_scripts = 
    relion-helper = relion_helper.__main__:main

[bdist_wheel]
universal = 1
